# GotHub-JupyterHub-Home

./: .gitignore  __keys__  __keys__.yaml  __welcome__.ipynb  demo.ipynb  game_demo.ipynb  input_for_game.txt  pyproject.toml
.local/share/jupyter/kernels/_ipykernel/: kernel.json
.local/share/jupyter/kernels/chatgpt-3.5/: kernel.json
.local/share/jupyter/kernels/code-llama/: kernel.json
.local/share/jupyter/kernels/dall-e-3/: kernel.json
.local/share/jupyter/kernels/gothub_kernel/: kernel.json
.local/share/jupyter/kernels/llama-2/: kernel.json
.local/share/jupyter/kernels/mixtral/: kernel.json
.local/share/jupyter/kernels/sdxl/: kernel.json
__examples__/: ask.ipynb  compare_chat_models.ipynb  compare_image_models.ipynb  use_custom_library.ipynb
gothub/: pyproject.toml
gothub_at_home/: .gitignore
gothub_at_home/src/got/: __init__.py
gothub_at_home/src/gothub_kernel_launcher/: __init__.py  __main__.py
gothub_at_home/src/gothub_kernel_launcher/kernels/: chatgpt_kernel.py  echo_kernel.py
gothub_at_home/src/gothub_kernel_launcher/kernels/errors/: __init__.py
lib/: __init__.py
src/got/: __init__.py
src/got/utils/: __init__.py
src/gothub_kernel_launcher/kernels/: __init__.py  chatgpt_kernel.py
src/gothub_kernel_launcher/kernels/configs/: __init__.py
src/gothub_kernel_launcher/kernels/errors/: __init__.py
src/gothub_kernel_launcher/kernels/super_king/: __init__.py
src/gothub_kernel_launcher/kernels/utils/: firebase.py
src/gothub_kernel_launcher_code_llama/: __main__.py
src/gothub_kernel_launcher_dall_e_3/: __main__.py
src/gothub_kernel_launcher_gpt_3_5/: __main__.py
src/gothub_kernel_launcher_llama_2/: __main__.py
src/gothub_kernel_launcher_mixtral/: __main__.py
src/gothub_kernel_launcher_sdxl/: __main__.py
srv/conda/envs/notebook/share/jupyter/kernels/python3/: kernel.json
