[project]
name = "gothub_at_home"        # Required
version = "0.0.1"              # Required
description = "GotHub at home" # Optional
readme = "README.md"           # Optional

requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["gothub"]
authors = [
    { name = "Shangdian (King) Han", email = "kingh0730@berkeley.edu" },
    { name = "Haohan (Wayne) Wang", email = "wangh5327@gmail.com" },
    { name = "Long (Logan) Ju", email = "loganju2000@gmail.com" },
]
maintainers = [
    { name = "Shangdian (King) Han", email = "kingh0730@berkeley.edu" },
    { name = "Haohan (Wayne) Wang", email = "wangh5327@gmail.com" },
    { name = "Long (Logan) Ju", email = "loganju2000@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = []

[project.optional-dependencies]
dev = []
test = []

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"

[project.scripts]


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
